--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://feedback.rajhibuild.com/",
+  "homepage": "http://feedback.rajhibuild.com",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
